Fix broken CSS
Makes it look like sample picture.

--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   padding: 20px;
+  display: flex;
 }
 
 * {
@@ -14,6 +15,7 @@ ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: none;
 }
 
 .results {
@@ -31,10 +33,6 @@ ul {
 }
 .result:hover {
   background-color: #eee;
-}
-
-form {
-  display: flex;
 }
 
 .form-group + .form-group {
